[project]
name = "cosmos-flask"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "Flask==3.0.3",
  "azure-cosmos==4.7.0",
  "python-dotenv==1.0.1",
  "flask-cors==4.0.1",
  "gunicorn==23.0.0",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0"
  "azure-storage-blob==12.23.0"
]

[tool.gunicorn]
workers = 2
threads = 2
timeout = 60
